# LibreAI

./: .gitignore  Addons.xcu  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Jobs.xcu  README.md  Sidebar.xcu  UIFactories.xcu  build.ps1  build.sh  description-en.txt  description.xml  package_deb.sh
.github/workflows/: release-macos.yml  release-windows.yml  release.yml  test.yml
include/com/sun/star/accessibility/: AccessibleEventObject.hdl  AccessibleEventObject.hpp  AccessibleRelation.hdl  AccessibleRelation.hpp  AccessibleRole.hdl  AccessibleScrollType.hdl  IllegalAccessibleComponentStateException.hdl  IllegalAccessibleComponentStateException.hpp  XAccessible.hpp  XAccessibleAction.hpp  XAccessibleComponent.hpp  XAccessibleContext.hdl  XAccessibleContext.hpp  XAccessibleContext2.hpp  XAccessibleContext3.hpp  XAccessibleEditableText.hpp  XAccessibleEventBroadcaster.hpp  XAccessibleEventListener.hpp  XAccessibleExtendedAttributes.hpp  XAccessibleExtendedComponent.hdl  XAccessibleExtendedComponent.hpp  XAccessibleGroupPosition.hpp  XAccessibleHyperlink.hpp  XAccessibleHypertext.hpp  XAccessibleImage.hpp  XAccessibleKeyBinding.hpp  XAccessibleMultiLineText.hpp  XAccessibleRelationSet.hdl  XAccessibleRelationSet.hpp  XAccessibleSelection.hdl  XAccessibleSelection.hpp  XAccessibleStateSet.hdl  XAccessibleStateSet.hpp  XAccessibleTable.hdl  XAccessibleTable.hpp  XAccessibleTableSelection.hpp  XAccessibleText.hpp  XAccessibleTextAttributes.hpp  XAccessibleTextMarkup.hpp  XAccessibleTextSelection.hpp  (+2 more)
include/com/sun/star/animations/: Timing.hdl  XAnimate.hpp  XAnimateColor.hpp  XAnimateMotion.hpp  XAnimatePhysics.hpp  XAnimateSet.hpp  XAnimateTransform.hpp  XAnimationListener.hpp  XAnimationNode.hpp  XAnimationNodeSupplier.hpp  XAudio.hpp  XCommand.hpp  XIterateContainer.hpp  XParallelTimeContainer.hpp  XTimeContainer.hpp  XTransitionFilter.hpp
include/com/sun/star/auth/: AuthenticationFailedException.hdl  AuthenticationFailedException.hpp  InvalidArgumentException.hdl  InvalidArgumentException.hpp  InvalidContextException.hdl  InvalidContextException.hpp  InvalidCredentialException.hdl  InvalidCredentialException.hpp  InvalidPrincipalException.hdl  InvalidPrincipalException.hpp  PersistenceFailureException.hdl  PersistenceFailureException.hpp  UnsupportedException.hdl  UnsupportedException.hpp  XSSOAcceptorContext.hpp  XSSOContext.hpp  XSSOInitiatorContext.hpp  XSSOManager.hpp  XSSOManagerFactory.hpp  XSSOPasswordCache.hpp
include/com/sun/star/awt/: ActionEvent.hpp  AdjustmentEvent.hpp  AdjustmentType.hdl  DockingEvent.hpp  EndDockingEvent.hpp  EndPopupModeEvent.hpp  EnhancedMouseEvent.hpp  FocusEvent.hpp  FontSlant.hdl  GradientStyle.hdl  InputEvent.hpp  ItemEvent.hpp  ItemListEvent.hpp  Key.hdl  KeyEvent.hpp  MenuEvent.hpp  MenuItemType.hdl  MessageBoxType.hdl  MouseEvent.hpp  PaintEvent.hpp  PrinterException.hdl  PrinterException.hpp  PushButtonType.hdl  RasterOperation.hdl  SpinEvent.hpp  TextEvent.hpp  VclContainerEvent.hpp  WindowClass.hdl  WindowEvent.hpp  XActionListener.hpp  XActivateListener.hpp  XAdjustmentListener.hpp  XAnimatedImages.hpp  XAnimation.hpp  XBitmap.hpp  XButton.hpp  XCallback.hpp  XCheckBox.hpp  XComboBox.hpp  XContainerWindowEventHandler.hpp  (+110 more)
include/com/sun/star/beans/: GetDirectPropertyTolerantResult.hpp  IllegalTypeException.hdl  IllegalTypeException.hpp  IntrospectionException.hdl  IntrospectionException.hpp  NotRemoveableException.hdl  NotRemoveableException.hpp  PropertyChangeEvent.hpp  PropertyExistException.hdl  PropertyExistException.hpp  PropertySetInfoChangeEvent.hpp  PropertyState.hdl  PropertyStateChangeEvent.hpp  PropertyVetoException.hdl  PropertyVetoException.hpp  UnknownPropertyException.hdl  UnknownPropertyException.hpp  XExactName.hpp  XFastPropertySet.hpp  XHierarchicalPropertySet.hpp  XIntrospection.hpp  (+23 more)
include/org/freedesktop/PackageKit/: XModify.hpp  XQuery.hpp  XSyncDbusSessionHelper.hpp
plans/: libreai-architecture-overview.md
spec/: LibreAI_Specification.md  ai-providers.md  architecture.md  build-release.md  config.md  feature-batch-rewrite.md  feature-image-generation.md  feature-prompt-library.md  i18n.md  testing.md  ui-chat-window.md  ui-config-dialog.md  uno-components.md
src/: AIClient.hpp  CMInterceptor.cpp  ChatWindow.cpp  ChatWindow.hpp  Config.cpp  Config.hpp  ConfigDialog.cpp  ConfigDialog.hpp  LibreAIJob.cpp  LibreAIJob.hpp  LibreAIStarter.cpp  Logger.cpp  OpenAIClient.hpp  UnoHelper.hpp  component.cpp  qt.conf  qtconf.qrc
src/ai/: AIClient.cpp  AIClient.hpp  AnthropicClient.cpp  AnthropicClient.hpp  GeminiClient.cpp  GeminiClient.hpp  GeminiImageClient.cpp  GeminiImageClient.hpp  GrokClient.cpp  GrokClient.hpp  GrokImageClient.cpp  GrokImageClient.hpp  ImageClient.cpp  ImageClient.hpp  OllamaClient.cpp  OllamaClient.hpp  OllamaImageClient.cpp  OllamaImageClient.hpp  OpenAIClient.cpp  OpenAIClient.hpp  OpenAIImageClient.cpp  OpenAIImageClient.hpp
src/core/: BatchProcessor.cpp  BatchProcessor.hpp  Config.cpp  Config.hpp  CredentialBackendDPAPI.cpp  CredentialBackendDPAPI.hpp  CredentialBackendKeychain.cpp  CredentialBackendKeychain.hpp  CredentialBackendMacOS.cpp  CredentialBackendMacOS.hpp  CredentialBackendMemory.cpp  CredentialBackendMemory.hpp  CredentialStore.cpp  CredentialStore.hpp  HistoryStore.hpp  Logger.cpp  Logger.hpp
src/ui/: BatchRewriteDialog.cpp  BatchRewriteDialog.hpp  ChatWindow.cpp  ChatWindow.hpp  ConfigDialog.cpp  ConfigDialog.hpp  DualListWidget.cpp  DualListWidget.hpp  ImageGenDialog.cpp  ImageGenDialog.hpp
src/uno/: CMInterceptor.hpp  DocumentParser.cpp  DocumentParser.hpp  LibreAIJob.cpp  LibreAIStarter.cpp  LibreAIStarter.hpp  UnoHelper.cpp  UnoHelper.hpp  component.cpp
tests/integration/: conftest.py  test_extension_loads.py  test_oxt_bundle.py
tests/unit/: CMakeLists.txt  test_ai_parsing.cpp  test_config.cpp  test_logger.cpp
translations/: libreai_da.qm  libreai_da.ts  libreai_de.qm  libreai_de.ts  libreai_es.qm  libreai_es.ts  libreai_fi.qm  libreai_fi.ts  libreai_nb.qm  libreai_nb.ts  libreai_pt.qm  libreai_pt.ts  libreai_sv.qm  libreai_sv.ts  libreai_translations.qrc
(+2265 files in other folders)
